--- a/all javascript/counter2.html
+++ b/all javascript/counter2.html
@@ -4,22 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Countdown Timer</title>
-    
 </head>
 <body>
 
 <div class="counter-container">
   <input type="number" id="startValue" placeholder="Enter starting value">
-  <button onclick="startCountdown()">Start Countdown</button>
+  <button onclick="startCountdown()">Start</button>
+  <button onclick="pauseCountdown()">Pause</button>
+  <button onclick="resumeCountdown()">Resume</button>
   <div class="count" id="counterDisplay">0</div>
   <span id="doneMessage" style="font-weight: bold; color: green;"></span>
 </div>
 
 <script>
   let countdownInterval;
+  let counter = 0;
 
   function startCountdown() {
-    clearInterval(countdownInterval); 
+    clearInterval(countdownInterval); // Stop any existing countdown
 
     const startValue = parseInt(document.getElementById('startValue').value);
     const counterDisplay = document.getElementById('counterDisplay');
@@ -30,7 +32,7 @@
       return;
     }
 
-    let counter = startValue;
+    counter = startValue;
     counterDisplay.textContent = counter;
     doneMessage.textContent = ""; 
 
@@ -40,7 +42,24 @@
         counterDisplay.textContent = counter;
       } else {
         clearInterval(countdownInterval);
+        counterDisplay.textContent = 0;
         doneMessage.textContent = "Done";
+      }
+    }, 1000);
+  }
+
+  function pauseCountdown() {
+    clearInterval(countdownInterval);
+  }
+
+  function resumeCountdown() {
+    countdownInterval = setInterval(() => {
+      if (counter > 0) {
+        counter--;
+        document.getElementById('counterDisplay').textContent = counter;
+      } else {
+        clearInterval(countdownInterval);
+        document.getElementById('doneMessage').textContent = "Done";
       }
     }, 1000);
   }
