--- a/all javascript/counter2.html
+++ b/all javascript/counter2.html
@@ -21,7 +21,7 @@
   let counter = 0;
 
   function startCountdown() {
-    clearInterval(countdownInterval); // Stop any existing countdown
+    clearInterval(countdownInterval); 
 
     const startValue = parseInt(document.getElementById('startValue').value);
     const counterDisplay = document.getElementById('counterDisplay');
