--- a/all javascript/counter2.html
+++ b/all javascript/counter2.html
@@ -12,7 +12,10 @@
   <button onclick="startCountdown()">Start</button>
   <button onclick="pauseCountdown()">Pause</button>
   <button onclick="resumeCountdown()">Resume</button>
-  <div class="count" id="counterDisplay">0</div>
+  <div style="display: flex; align-items: center;">
+    <div><p>count :</p></div>
+    <div class="count" id="counterDisplay">0</div>
+  </div>
   <span id="doneMessage" style="font-weight: bold; color: green;"></span>
 </div>
 
@@ -59,7 +62,7 @@
         document.getElementById('counterDisplay').textContent = counter;
       } else {
         clearInterval(countdownInterval);
-        document.getElementById('doneMessage').textContent = "Done";
+        document.getElementById('doneMessage').textContent = "Done 👍👍";
       }
     }, 1000);
   }
