--- a/all javascript/counter2.html
+++ b/all javascript/counter2.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Countdown Timer</title>
 </head>
-<body>
+<body>+
 
 <div class="counter-container">
   <input type="number" id="startValue" placeholder="Enter starting value">
@@ -68,7 +68,7 @@
       }
     }, 1000);
   }
-
+   
   function playCompletionAudio() {
     const audio = new Audio('../audio/Rema-DND-(TrendyBeatz.com).mp3'); 
     audio.play();
