--- a/homework-5/index.html
+++ b/homework-5/index.html
@@ -8,8 +8,58 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+
+   <!-- Navbar -->
+   <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
+    <div class="container">
+        <!-- Logo -->
+        <a class="navbar-brand" href="#">
+            <span style="color: #007bff;">NIKDEL</span> Store
+        </a>
+
+        <!-- Mobile Toggle Button -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Navbar Links -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mx-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Shop</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Categories</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Deals</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
+            <!-- Search and Cart -->
+            <form class="d-flex me-3">
+                <input class="form-control search-input me-2" type="search" placeholder="Search products..." aria-label="Search">
+                <button class="btn btn-outline-primary" type="submit">Search</button>
+            </form>
+            <a href="#" class="text-dark cart-icon">
+                <i class="fas fa-shopping-cart"></i>
+                <span class="badge bg-primary rounded-pill"></span>
+            </a>
+        </div>
+    </div>
+</nav>
+
+
+
+
+
   <header class="bg- text-black text-center py-3">
-    <h1>Welcome to FakeStore</h1>
+    <h1>Welcome to NikdelStore</h1>
     <p>Your One-Stop Online Shop!</p>
   </header>
 
@@ -23,7 +73,7 @@
   <script>
     const productContainer = document.getElementById('product-container');
 
-    async function fetchProducts() {0.
+    async function fetchProducts() {
       try {
         const response = await fetch('https://fakestoreapi.com/products');
         const products = await response.json();
